--- a/template/footer.html
+++ b/template/footer.html
@@ -4,7 +4,7 @@
         <b>&copy; <a href="/">{{.Conf.Site.Brand}}</a></b> | <small>Powered by <a
                 href="https://nezha.wiki/" target="_blank">Nezha</a>
             </small> | <small> Designed by <a
-                href="https://blog.amzayo.com" target="_blank">Amzayo</a>
+                href="https://home.oberl.com" target="_blank">Oberl</a>
             </small>
     </div>
 </div>
