--- a/template/footer.html
+++ b/template/footer.html
@@ -4,7 +4,7 @@
         <b>&copy; <a href="/">{{.Conf.Site.Brand}}</a></b> | <small>Powered by <a
                 href="https://nezha.wiki/" target="_blank">Nezha</a>
             </small> | <small> Designed by <a
-                href="https://home.oberl.com" target="_blank">Oberl</a>
+                href="https://lvliao.cc" target="_blank">LvGJ & Amzayo</a>
             </small>
     </div>
 </div>
@@ -12,7 +12,8 @@
 <script src="https://cdn.staticfile.org/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="/static/semantic-ui-alerts.min.js"></script>
 <script src="https://cdn.staticfile.org/vue/2.6.14/vue.min.js"></script>
-<script src="/static/main.js?v20230614"></script>
+<script src="/static/main.js?v20240213"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/echarts/5.3.0-rc.1/echarts.min.js"></script>
 <script>
     (function () {
         updateLang({{.LANG }});
