--- a/template/header.html
+++ b/template/header.html
@@ -16,7 +16,7 @@
     <link href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-logos/0.17/font-logos.min.css" type="text/css"
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="/static/semantic-ui-alerts.min.css">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.amzayo.top/static/public/luban/luban_head.png" />
+    <link rel="shortcut icon" type="image/png" href="../../static/theme-custom/head.png" />
 </head>
 
 <body>
