--- a/template/service.html
+++ b/template/service.html
@@ -20,6 +20,7 @@
                 </thead>
                 <tbody>
                     {{range $service := .Services}}
+                    {{if $service.Monitor.EnableShowInService}}
                     <tr>
                         <td class="ui center aligned">{{$service.Monitor.Name}}</td>
                         <td class="ui center aligned">
@@ -35,7 +36,7 @@
                                 class="delay-today {{className (divU64 $service.CurrentUp (addU64 $service.CurrentUp $service.CurrentDown))}}"></i>
                             {{statusName (divU64 $service.CurrentUp (addU64 $service.CurrentUp $service.CurrentDown))}}
                         </td>
-                    </tr> {{end}}
+                    </tr> {{end}}{{end}}
                 </tbody>
             </table>
 
